# website-compliance-crawler

./: .gitignore  CLAUDE.md  README.md  app.py  crawler.py  pyproject.toml  requirements.txt  setup.sh  test_content_extractor.py  test_parser.py
docs/: DEVELOPMENT.md  SETUP.md  USAGE.md  changelog.md  decisions.md  ideas.md  todo.md
docs/sessions/: 2026-03-11.md  2026-03-15.md
src/: content_extractor.py  sitemap_parser.py
templates/: index.html
tests/: test_cli_validation.py  test_content_extractor.py  test_domain_normalization.py  test_integration.py  test_policy_discovery.py  test_sitemap_parser.py  test_url_categorization.py
