[project]
name = "website-compliance-crawler"
version = "1.0.0"
description = "Crawlt Websites und extrahiert strukturierte Daten für Compliance-Analyse"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
